syntax = "proto3";

package stats.service.collector;

import "messages/user_action.proto";
import "google/protobuf/empty.proto";

option java_package = "ru.practicum.ewm.grpc.stats.controller";

service UserActionController {
  rpc CollectUserAction(stats.message.event.UserActionProto) returns (google.protobuf.Empty);
}